src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Slabo+27px&family=Ultra&display=swap');

:root {
  /* Spacing */
  --space-unit: 1em;
  --space-xxs: calc(0.25 * var(--space-unit));
  --space-xs: calc(0.5 * var(--space-unit));
  --space-sm: calc(0.75 * var(--space-unit));
  --space-md: calc(1.25 * var(--space-unit));
  --space-lg: calc(2 * var(--space-unit));
  --space-xl: calc(3.25 * var(--space-unit));
  --space-xxl: calc(5.25 * var(--space-unit));

  /* Colors */
  --delft-blue: #1d2f6fff;
  --vista-blue: #8390faff;
  --accent-color: #fac748ff;
  --lavender-blush: #f9e9ecff;
  --tickle-me-pink: #f88dadff;

  --primary-color: var(--delft-blue);
  --primary-light-color: var(--vista-blue);
  --secondary-light-color: var(--lavender-blush);
  --secondary-color: var(--tickle-me-pink);

  --dark-color: var(--delft-blue);
  --light-color: var(--lavender-blush);

  /* Breakpoints */
  --screen-sm-min: 576px;
  --screen-md-min: 768px;
  --screen-lg-min: 992px;
  --screen-xl-min: 1200px;

  /* Fonts & text */
  --font-family-primary: "Slabo 27px", serif;
  --font-family-secondary: "Ultra", serif;

  --font-weight-regular: 400;
  --font-weight-bold: 700;
  --font-weight-extra-bold: 1000;

  /* set base values */
  --text-base-size: 1em;
  --text-scale-ratio: 1.2;

  /* type scale */
  --text-xs: calc(1em / (var(--text-scale-ratio) * var(--text-scale-ratio)));
  --text-sm: calc(1em / var(--text-scale-ratio));
  --text-md: calc(1em * var(--text-scale-ratio));
  --text-lg: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio));
  --text-xl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
  --text-xxl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
  --text-xxxl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
  --text-xxxxl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
  --text-giant: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));

  /* other */
  --border-radius: 10px;
}

*,
*:before,
*:after {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -ms-box-sizing: border-box;
}

html {
  background-color: var(--light-color);
  font-family: var(--font-family-primary);
  font-weight: 400;
  font-style: normal;
  height: 100%;
  min-height: 100%;
}

h1,
h2,
h3 {
  font-family: var(--font-family-secondary);
  font-weight: 400;
  font-style: normal;
  margin-bottom: var(--space-sm);
}

h1 {
  margin: 1rem 0;
  font-size: 2.5rem;
}

p {
  margin-bottom: var(--space-sm);
}

ul,
ol {
  margin-bottom: var(--space-sm);
  padding-left: var(--space-lg);
}

body {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
  margin: 0;
  padding: 0;
  width: 100%;
  min-width: fit-content;
  max-width: 100vw;
  line-height: 1.5;
  color: var(--dark-color);
  font-size: var(--text-lg);
  height: 100%;
  box-sizing: border-box;
}

header {
  width: 100%;
}

.main-wrapper {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.content {
  max-width: 100%;
  padding: var(--space-lg);

  & h1 {
    font-size: var(--text-giant);
  }

  & h2 {
    font-size: var(--text-xxxl);
  }

  & h3 {
    font-size: var(--text-xl);
  }

  & p,
  ul,
  ol,
  table {
    font-size: var(--text-xxl);
  }
}

@media screen and (min-width: 768px) {
  .content {
    width: 1000px;

    & p,
    ul,
    ol,
    table {
      font-size: var(--text-lg);
    }

    & h2 {
      font-size: var(--text-xxl);
    }

    & h3 {
      font-size: var(--text-lg);
    }
  }
}

.content__title {
  text-align: center;
  font-size: var(--text-xxxl);
  text-decoration: underline wavy var(--secondary-color);
  text-underline-offset: 0.1em;
}

a,
a:visited {
  color: var(--dark-color);
  text-decoration: underline;
  text-decoration-color: var(--primary-light-color);
  text-decoration-style: wavy;
  text-underline-offset: 0.1em;
  font-weight: var(--font-weight-extra-bold);
}

a:hover,
a:focus {
  text-decoration-color: var(--secondary-color);
}

blockquote {
  padding-left: var(--space-lg);
  margin-bottom: var(--space-md);
  position: relative;
  overflow: hidden;

  &::before,
  &::after {
    position: absolute;
    color: var(--primary-color);
  }

  p {
    margin: 0;
  }

  p+p {
    margin-top: var(--space-md);
  }

  &::before {
    content: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 24 24' fill='%231d2f6fff'><path d='M9.983 3v7.391C9.983 16.095 6.252 19.961 1 21l-.995-2.151C2.437 17.932 4 15.211 4 13H0V3h9.983zM24 3v7.391c0 5.704-3.748 9.571-9 10.609l-.996-2.151C16.437 17.932 18 15.211 18 13h-3.983V3H24z'/></svg>");
    left: 0;
  }

  &::after {
    content: "";
    left: 10px;
    top: 40px;
    width: 5px;
    height: 100%;
    background-color: var(--primary-light-color);
  }
}

